# Generative-AI-Engenering

01-Introduction/: readme.md
02-Neural-Networks/: readme.md
03-Understand-LLM-InDepth/: readme.md
04-Prompt-Engenering/: readme.md
05-Compound-AI-System/: readme.md
06-Google-Gemeni/: README.md  pyproject.toml
06-Google-Gemeni/01-All-Models/: app.py  readme.md
06-Google-Gemeni/02-Text-to-Text/: app.py
06-Google-Gemeni/03-Image-to-Text/: Gemini.ipynb
06-Google-Gemeni/04-Chat-History/: app.py
06-Google-Gemeni/05-Embedding/: app.py
06-Google-Gemeni/06-Function-Calling/: readme.md
08-LangChain-Projects/01-Health_Faq_Chatbot/: pyproject.toml
08-LangChain-Projects/02-Formula1_Chatbot/: .env  pyproject.toml  requirements.txt
08-LangChain-Projects/02-Formula1_Chatbot/src/02_formula1_chatbot/: __init__.py  data_processing.py
08-LangChain-Projects/02-Formula1_Chatbot/src/test/: RAG-F1-GPT.ipynb
08-LangChain-Projects/03-Conversation_RAG/: pyproject.toml
08-LangChain-Projects/03-Conversation_RAG/src/conversation_rag/: __init__.py
08-LangChain-Projects/Formula1_Chatbot/: pyproject.toml
08-LangChain-Projects/Formula1_Chatbot/formula1_chatbot/: data_processing.py  retrivel_augment.py  streamlit_app.py
08-LangChain-Projects/Health_Faq_Chatbot/: question.txt
08-LangChain-Projects/Health_Faq_Chatbot/health_faq_chatbot/: chatbot.py  streamlit_app.py
08-LangChain-Projects/Projects Guide/: projects.md  readme.md
