[tool.poetry]
name = "health-faq-chatbot"
version = "0.1.0"
description = ""
authors = ["abdulrehman1004 <rehman.abdul008844@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.13"
langchain-community = "^0.3.13"
streamlit = "^1.41.1"
langchain-google-genai = "^2.0.7"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
